idea code inspect